Bug 1233979: Align keyboard shortcut icon left
Also, avoid overlapping the warning box

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -1155,17 +1155,18 @@ body > header aside p {
   display: none;
   float: left;
   line-height: 22px;
-  padding: 9px 10px 9px 0;
+  padding: 9px 10px;
 }
 
 #hotkeys {
   cursor: pointer;
+  position: static; /* Avoid overlapping warning box */
 }
 
 #hotkeys .selector {
   color: #AAAAAA;
   font-size: 22px;
-  padding: 8px 10px;
+  padding: 8px 10px 8px 0;
 }
 
 #hotkeys .selector:hover {
